fix: layout dashboard fixed footer position & section spacing

--- a/public/styles/dashboardVotreEspace.css
+++ b/public/styles/dashboardVotreEspace.css
@@ -8,9 +8,33 @@
 }
 
 body {
-    padding: 70px
+    height: 100vh;
+    display: flex;
+    flex-flow: column;
+    justify-content: space-between;
+}
+
+main {
+    height: 100%;
+}
+
+section {
+    margin-top: 14px;
+    display: flex;
+    flex-flow: column;
+    gap: 64px;
+    position: relative;
 }
 
 h1 {
-    margin-left: 21px
+    font-size: var(--fs-title);
+    font-family: "arpona", serif;
+    font-weight: 400;
+}
+
+@media only screen and (max-width: 780px) {
+    section {
+        margin-top: 0;
+        gap: 16px;
+    }
 }
